infra/terraform/esendit/k8s-app/overlays/base/delivery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esendit-delivery-worker
  namespace: esendit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esendit-delivery-worker
  template:
    metadata:
      labels:
        app: esendit-delivery-worker
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: esendit-delivery-sa
      volumes:
        - name: kv-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: esendit-secrets

      containers:
        - name: deliveryworker
          image: delivery-worker-image
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: kv-secrets
              mountPath: /mnt/secrets-store
              readOnly: true

          command: ["sh", "-c"]
          args:
            - >
              set -e;
              export PG_URL="$(cat /mnt/secrets-store/pg-connection-url)";
              export DATABASE_URL="$PG_URL";
              export REDIS_URL="$(cat /mnt/secrets-store/redis-connection-url)";
              exec node dist/src/worker/delivery-worker.js

          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
