infra/terraform/esendit/k8s-app/overlays/base/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: esendit-backend
  namespace: esendit
  labels:
    monitor: esendit
spec:
  selector:
    app: esendit-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
