infra/terraform/esendit/k8s-app/overlays/base/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: esendit-frontend
spec:
  type: ClusterIP
  selector:
    app: esendit-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
